5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1618_2934.log
== TEST (2019-04-02 10:02:24) 
-- CODE:
from math import *
-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:09:35) 
-- CODE:
from math import *
q0 = float(input("valor: "))
r = float(input("taxa anual: "))
qf = f(q0) q0
-- ERROR:
File "XXXX", line 4
    qf = f(q0) q0
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:10:01) 
-- CODE:
from math import *
q0 = float(input("valor: "))
r = float(input("taxa anual: "))
qf = q0
-- ERROR:
File "XXXX", line 4
    qf = f(q0) q0
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:14:59) 
-- CODE:
from math import *
q0 = float(input("valor: "))
r = float(input("taxa anual: "))
qf = q0

y = (log(qf) - log(q0)) / r
r = int(input(y)) + 1

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = int(input(y)) + 1
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:12) 
-- CODE:
from math import *
q0 = float(input("valor: "))
r = float(input("taxa anual: "))
qf = q0

y = (log(qf) - log(q0)) / r
r = int(input(y)) + 1

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = int(input(y)) + 1
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:29) 
-- CODE:
from math import *
q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = q0

y = (log(qf) - log(q0)) / r
r = int(input(y)) + 1

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = int(input(y)) + 1
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:16:02) 
-- CODE:
from math import *
q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = q0

y = (log(qf) - log(q0)) / r
r = int(input(y)) + 1

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    r = int(input(y)) + 1
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:19:00) 
-- CODE:
from math import *
q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = f(q0): x

y = (log(qf) - log(q0)) / r
r = int(input(y)) + 1

print(y)
-- ERROR:
File "XXXX", line 4
    qf = f(q0): x
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:19:19) 
-- CODE:
from math import *
q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = f(q0):q0

y = (log(qf) - log(q0)) / r
r = int(input(y)) + 1

print(y)
-- ERROR:
File "XXXX", line 4
    qf = f(q0):q0
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:19:31) 
-- CODE:
from math import *
q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = f(qf):q0

y = (log(qf) - log(q0)) / r
r = int(input(y)) + 1

print(y)
-- ERROR:
File "XXXX", line 4
    qf = f(qf):q0
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:21:41) 
-- CODE:
from math import *
q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = (log(qf) - log(q0)) / r
r = y * 3

print(r)
-- OUTPUT:
32.95836866004328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:31:17) 
-- CODE:
from log import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = (log(qf) - log(q0)) / r
r = y * 3

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from log import *
ModuleNotFoundError: No module named 'log'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:31:40) 
-- CODE:
from math import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = (log(qf) - log(q0)) / r
r = y * 3

print(r)
-- OUTPUT:
32.95836866004328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:32:56) 
-- CODE:
from math import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = (log(qf) - log(q0)) / r
s = int(input(y)) + 1
r = y * 3

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = int(input(y)) + 1
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:34:07) 
-- CODE:
from math import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = int(input((log(qf) - log(q0)) / r )) + 1
r = y * 3

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y = int(input((log(qf) - log(q0)) / r )) + 1
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:34:26) 
-- CODE:
from math import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = int(input((log(qf) - log(q0)) / r )) 
r = y * 3

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y = int(input((log(qf) - log(q0)) / r )) 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:36:04) 
-- CODE:
from math import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = (log(qf) - log(q0)) / r 
t = int(y) + 1

r = t * 3

print(r)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:36:32) 
-- CODE:
from math import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = (log(qf) - log(q0)) / r 
t = int(y) + 1

print(t)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:36:41) 
-- CODE:
from math import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = (log(qf) - log(q0)) / r 
t = int(y) + 1

print(t)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:36:45) 
-- CODE:
from math import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = (log(qf) - log(q0)) / r 
t = int(y) + 1

print(t)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:36:55) 
-- CODE:
from math import *

q0 = float(input("valor:"))
r = float(input("taxa anual:"))
qf = 3 * q0

y = (log(qf) - log(q0)) / r 
t = int(y) + 1

print(t)
-- EXECUTION TIME:
0.112256
-- TEST CASE 1:
---- input:
155.0
0.10
---- correct output:
11
---- user output:
11
-- TEST CASE 2:
---- input:
123.3
0.33
---- correct output:
4
---- user output:
4
-- TEST CASE 3:
---- input:
111.1
0.11
---- correct output:
10
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
